k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proyectoweb-dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proyecto-web
  namespace: proyectoweb-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proyecto-web
  template: 
    metadata:
      labels:
        app: proyecto-web
    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: proyecto-web
          image: ghcr.io/melrock08/proyecto_web:latest
          ports:
            - containerPort: 8080   # Spring Boot usa 8080
---
apiVersion: v1
kind: Service
metadata:
  name: proyecto-web
  namespace: proyectoweb-dev
spec:
  selector:
    app: proyecto-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto-web-ingress
  namespace: proyectoweb-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public   
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proyecto-web
                port:
                  number: 8080
